# logpile

./: .git-blame-ignore-revs  .gitignore  BACKLOG.md  README.md  logpile.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: RECONCEPT.md
docs/reviews/: 2026-07-11-batch1-summary.md  2026-07-11-batch2-summary.md  2026-07-11-batch3-summary.md  2026-07-11-sol-full-review.md  2026-07-18-ccusage-verification.md  2026-07-21-search-rebuild-summary.md
logpile/: __init__.py  backup.py  cli.py  db.py  discovery.py  github.py  objectives.py  origins.py  parsers.py  publish.py  search.py  stats.py  sync.py
logpile/web/: app.py
logpile/web/static/: style.css
logpile/web/templates/: analysis.html  base.html  dashboard.html  session_detail.html  session_private.html  sessions.html  user_profile.html  users.html
notes/: token-forensics-2026-04-13.md
scripts/: build_landing.py  deploy_landing.sh
site/: index.html
supabase/.temp/: pooler-url  project-ref
tests/: test_backup.py  test_claims.py  test_cli_backends.py  test_contract.py  test_migrations.py  test_parsers.py  test_publish.py  test_rules.py  test_search.py  test_shell_scripts.py  test_stats.py  test_sync.py  test_visibility_artifacts.py  test_web.py  test_web_transcript_streaming.py
tests/fixtures/claudecode/: cache-iteration-match.jsonl  cache-unknown-remainder.jsonl  residual-day.jsonl
tests/fixtures/claudecode/-tmp-demo/: root-session.jsonl
tests/fixtures/claudecode/claims/: claim-child.jsonl  claim-parent.jsonl
tests/fixtures/codex/: rollout-2026-05-01T00-00-00-parent-thread.jsonl  rollout-2026-06-08T11-39-04-leaf-thread.jsonl
tests/fixtures/migrations/: legacy-identity-collision.sql
web/: README.md  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analysis/: page.tsx
web/src/components/: activity-badges.tsx  badge.tsx  public-intro.tsx  publish-candidate-card.tsx  sidebar.tsx  stat-card.tsx  status-badge.tsx  topbar.tsx  workflow-lens-bar.tsx
web/src/lib/: chart-utils.ts  config.ts  db.ts  format.ts  origin-lens.ts  parsers.ts  publish.ts  types.ts
(+31 files in other folders)
