[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpile"
version = "0.1.0"
description = "Searchable Claude Code and Codex session logs"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "flask>=3.0",
]

[project.optional-dependencies]
cloud = [
    "boto3>=1.34",
    "psycopg[binary]>=3.2",
]

[project.scripts]
logpile = "logpile.cli:cli"
agentus = "logpile.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["logpile*"]
