[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpile"
version = "0.1.0"
description = "Searchable Claude Code and Codex session logs"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "flask>=3.0",
]

[project.optional-dependencies]
cloud = [
    "boto3>=1.34",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff==0.16.0",
]

[project.scripts]
logpile = "logpile.cli:cli"
agentus = "logpile.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["logpile*"]

[tool.ruff.lint]
ignore = [
    # Broad `except` is deliberate: sync/parse/serve must survive one
    # malformed session file or request without aborting the whole run.
    "BLE001",
    # DB rows are sqlite3.Row, where `.keys()` is required: `x in row`
    # tests column values, not names, so the suggested fix changes behavior.
    "SIM118",
]
